OOFSWIG/Tests/Errors/missing_endif.i
%module test
%{

%}

#ifdef TEST
double foo;
#else
